# grpc-generic

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE  go.mod  go.sum
cmd/protoc-gen-go-generic-grpc/: BUILD.bazel  file.go  protoc-generic-grpc.go  service_builder.go
cmd/protoc-gen-go-grpc-generic/: common.go  file.go  protoc-grpc-generic.go  service.go  service_builder.go
example/: BUILD.bazel  main.go
example/api/: BUILD.bazel  api.proto
example/bazel/: BUILD  README.md  WORKSPACE  go.mod
example/bazel/api/: BUILD.bazel
example/bazel/cmd/: BUILD.bazel  server.go
example/bazel/internal/action/: BUILD.bazel  say_hello_action.go  say_many_hello_action.go  stream_hello.go
example/cmd/: BUILD.bazel  server.go
example/golang/: Makefile
example/golang/api/: api.proto  buf.gen.yaml
example/golang/cmd/: server.go
example/golang/internal/action/: say_hello_action.go  say_many_hello_action.go  stream_hello.go
example/internal/: BUILD.bazel  server.go
example/internal/action/: BUILD.bazel  say_hello_action.go  say_many_hello_action.go  stream_hello.go
mocks/: mock_service_registrar.go
pkg/: BUILD  dispatching_rpc_server.go  dispatching_rpc_server_test.go
