load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["server.go"],
    importpath = "github.com/kchymet/grpc-generic/example/bazel/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//api",
        "//internal/action",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
