load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "action",
    srcs = [
        "say_hello_action.go",
        "say_many_hello_action.go",
        "stream_hello.go",
    ],
    importpath = "github.com/kchymet/generic-grpc/example/internal/action",
    visibility = ["//example:__subpackages__"],
    deps = ["//example/api"],
)
