load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "action",
    srcs = [
        "say_hello_action.go",
        "say_many_hello_action.go",
        "stream_hello.go",
    ],
    importpath = "github.com/kchymet/grpc-generic/internal/action",
    visibility = ["//example/bazel:__subpackages__"],
    deps = ["@com_github_kchymet_grpc_generic//example/bazel/api:go_default_library"],
)
